# graph_db

./: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/graph_db_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: friendship_edge.dart  main.dart  user_model.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: graph_db.podspec
ios/Classes/: graph_db.c
lib/: graph_db.dart  graph_db_bindings_generated.dart
lib/domain/: box.dart  edge.dart  node.dart
linux/: CMakeLists.txt
macos/: graph_db.podspec
src/: CMakeLists.txt  graph_db_c_api.cpp  graph_db_c_api.h
src/graph/domain/: edge.hpp  graph.hpp  node.hpp  property.hpp
src/graph/infrastructure/: edge.cpp  graph.cpp  node.cpp  property.cpp
src/storage/domain/: storage.hpp
src/storage/infrastructure/: storage.cpp
windows/: CMakeLists.txt
